# akira

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  deploy.sh  dev.sh
.github/workflows/: alpha.yml  canary.yml  ci.yml  docker.yml  nightly.yml  release.yml
apps/akira-companion/: .gitignore  go.mod  go.sum  main.go
apps/akira-companion/internal/nat/: nat.go
apps/akira-companion/internal/psn/: auth.go  constants.go  duid.go
apps/akira-companion/internal/server/: handlers.go  server.go
apps/akira-companion/internal/state/: state.go
apps/akira-companion/tui/: model.go  step_duid.go  step_login.go  step_server.go  styles.go
include/arch/: cc.h
include/core/: account.hpp  discovery_manager.hpp  exception.hpp  host.hpp  io.hpp  lwip_relay.hpp  settings_manager.hpp  stun_client.hpp  swipe_direction.hpp  thread_affinity.h  wireguard_manager.hpp
include/core/io/: audio_manager.hpp  bitmap_font.hpp  deko3d_renderer.hpp  frame_queue.hpp  input_manager.hpp  stream_stats.hpp  video_decoder.hpp  video_renderer.hpp
include/stream/: deko3d_renderer.hpp  frame_queue.hpp  haptic_manager.hpp  input_manager.hpp  ipc_service.hpp  nxext_ipc_server.h  session.hpp  stream_stats.hpp  video_decoder.hpp  video_renderer.hpp
include/util/: av_wrappers.hpp  curl_wrappers.hpp  net_wrappers.hpp  shared_view_holder.hpp
include/views/: account_edit_view.hpp  account_tab.hpp  add_host_tab.hpp  benchmark_view.hpp  build_info_tab.hpp  config_view_tab.hpp  connection_view.hpp  controller_remap_view.hpp  enter_pin_view.hpp  host_list_tab.hpp  host_settings_view.hpp  network_utilities_tab.hpp  settings_tab.hpp  stream_menu.hpp  stream_view.hpp
overlay/client/include/akira/: akira_client_ipc.h
overlay/client/src/: akira_client_ipc.c
overlay/common/include/akira/: ipc.h
resources/: build_info.txt
resources/i18n/en-US/: akira.json
resources/i18n/zh-Hans/: akira.json  hints.json
resources/shaders/: fsr_easu_fsh.glsl  fsr_pass_fsh.glsl  fsr_rcas_fsh.glsl  text_fsh.glsl  text_vsh.glsl  video_fsh.glsl  video_vsh.glsl
resources/xml/activity/: applet_warning.xml  main.xml
resources/xml/tabs/: account.xml  add_host.xml  build_info_tab.xml  config_view_tab.xml  host_list.xml  network_utilities_tab.xml  settings.xml
resources/xml/views/: account_edit.xml  benchmark_view.xml  connection_view.xml  controller_remap.xml  host_settings.xml  stream_menu.xml
scripts/: build-companion.sh  build-docker.sh
source/: discovery_manager.cpp  host.cpp  io.cpp  main.cpp
source/core/: discovery_manager.cpp  host.cpp  lwip_relay.cpp  settings_manager.cpp  stun_client.cpp  thread_affinity.cpp  wg_netif.c  wireguard_manager.cpp
source/io/: audio_manager.cpp  deko3d_renderer.cpp  frame_queue.cpp  haptic_manager.cpp  input_manager.cpp  video_decoder.cpp
source/stream/: audio_manager.cpp  deko3d_renderer.cpp  frame_queue.cpp  haptic_manager.cpp  input_manager.cpp  ipc_service.cpp  nxext_ipc_server.c  session.cpp  video_decoder.cpp
source/views/: account_edit_view.cpp  account_tab.cpp  add_host_tab.cpp  benchmark_view.cpp  build_info_tab.cpp  config_view_tab.cpp  connection_view.cpp  controller_remap_view.cpp  enter_pin_view.cpp  host_list_tab.cpp  host_settings_view.cpp  network_utilities_tab.cpp  settings_tab.cpp  stream_menu.cpp  stream_view.cpp
